[gd_scene load_steps=3 format=3 uid="uid://btd1e7e2up01g"]

[ext_resource type="Script" uid="uid://cfpsjsouy3pqb" path="res://main_menu.gd" id="1_7mewq"]
[ext_resource type="Texture2D" uid="uid://uthfian4bqg6" path="res://UI_health.png" id="2_bajiw"]

[node name="User Interface" type="Node2D"]
script = ExtResource("1_7mewq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 411.0
offset_top = 17.0
offset_right = 720.0
offset_bottom = 526.0

[node name="StartGame" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="Load" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Load Save"

[node name="Settings" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Tutorial" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Tutorial"

[node name="Quit Game" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="UI Design" type="Sprite2D" parent="."]
position = Vector2(338, 578)
texture = ExtResource("2_bajiw")

[connection signal="button_down" from="CanvasLayer/VBoxContainer/StartGame" to="." method="_on_start_game_button_down"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/Load" to="." method="_on_load_button_down"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/Settings" to="." method="_on_settings_button_down"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/Tutorial" to="." method="_on_tutorial_button_down"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/Quit Game" to="." method="_on_quit_game_button_down"]
